--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build:staging": "vite build --mode staging",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint src"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -29,9 +30,13 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
+    "eslint": "9.x",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.8.0",
     "sass": "^1.77.7",
     "tailwindcss": "^3.4.1",
     "vite": "^5.3.3"
