--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "globals": "^15.8.0",
     "sass": "^1.77.7",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "vite-svg-loader": "^5.1.0"
   }
 }
