--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build:staging": "vite build --mode staging",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit & vite build",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
-    "vite-svg-loader": "^5.1.0"
+    "vite-svg-loader": "^5.1.0",
+    "vue-tsc": "^2.0.26"
   }
 }
