--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install
       run: yarn
     - name: Build
-      run: yarn build:prod
+      run: yarn build
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
