--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build:staging": "vite build --mode staging",
     "build": "vue-tsc --noEmit & vite build",
-    "lint": "eslint src"
+    "lint": "oxlint src"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "globals": "^15.8.0",
+    "oxlint": "^0.6.1",
     "sass": "^1.77.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
