--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/node": "^20.14.12",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
