--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.1",
     "echarts": "^5.4.3",
+    "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.21",
     "swiper": "^8.4.5",
-    "tdesign-icons-vue-next": "^0.2.2",
-    "tdesign-vue-next": "1.8.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-echarts": "^6.6.1",
