--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build:staging": "vite build --mode staging",
     "build": "vue-tsc --noEmit & vite build",
-    "lint": "oxlint src"
+    "lint": "oxlint src",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -37,6 +38,7 @@
     "oxlint": "^0.6.1",
     "sass": "^1.77.7",
     "tailwindcss": "^3.4.1",
+    "prettier": "3.5.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
     "vite-svg-loader": "^5.1.0",
